@@ -13,7 +13,7 @@ module Padrino
     #
     def before_load(&block)
       @_before_load ||= []
-      @_before_load << Proc.new(&block) if block_given?
+      @_before_load << block if block_given?
       @_before_load
     end
 
@@ -29,8 +29,16 @@ module Padrino
     #
     def after_load(&block)
       @_after_load ||= []
-      @_after_load << Proc.new(&block) if block_given?
+      @_after_load << block if block_given?
       @_after_load
+    end
+
+    ##
+    # Returns the used $LOAD_PATHS from padrino
+    #
+    def load_paths
+      @_load_paths_was = %w(lib models shared).map { |path| Padrino.root(path) }
+      @_load_paths ||= @_load_paths_was
     end
 
     ##
@@ -39,23 +47,38 @@ module Padrino
     def load!
       return false if loaded?
       @_called_from = first_caller
-      set_encoding
-      set_load_paths(*load_paths) # We set the padrino load paths
+      Padrino.set_encoding
+      Padrino.set_load_paths(*load_paths) # We set the padrino load paths
       Padrino.logger # Initialize our logger
-      before_load.each { |bl| bl.call } # Run before hooks
-      dependency_paths.each { |path| require_dependencies(path) }
-      Reloader::Stat.run! # We need to fill our Stat::CACHE
-      after_load.each { |al| al.call } # Run after hooks
+      Padrino.before_load.each(&:call) # Run before hooks
+      Padrino.dependency_paths.each { |path| require_dependencies(path) }
+      Padrino.after_load.each(&:call) # Run after hooks
+      Padrino::Reloader::Stat.run!
       Thread.current[:padrino_loaded] = true
+    end
+
+    ##
+    # Clear the padrino env
+    #
+    def clear!
+      Padrino.clear_middleware!
+      Padrino.mounted_apps.clear
+      @_load_paths = nil
+      @_dependency_paths = nil
+      @_global_configuration = nil
+      Padrino.before_load.clear
+      Padrino.after_load.clear
+      Padrino::Reloader::Stat.clear!
+      Thread.current[:padrino_loaded] = nil
     end
 
     ##
     # Method for reloading required applications and their files
     #
     def reload!
-      before_load.each { |bl| bl.call } # Run before hooks
+      Padrino.before_load.each(&:call) # Run before hooks
       Reloader::Stat.reload! # detects the modified files
-      after_load.each { |al| al.call } # Run after hooks
+      Padrino.after_load.each(&:call) # Run after hooks
     end
 
     ##
@@ -95,6 +118,8 @@ module Padrino
     #   require_dependencies("#{Padrino.root}/lib/**/*.rb")
     #
     def require_dependencies(*paths)
+      options = paths.extract_options!
+
       # Extract all files to load
       files = paths.map { |path| Dir[path] }.flatten.uniq.sort
 
@@ -110,7 +135,7 @@ module Padrino
         # iteration, this prevent problems with rubinus
         files.dup.each do |file|
           begin
-            Reloader::Stat.safe_load(file)
+            Reloader::Stat.safe_load(file, options[:force])
             files.delete(file)
           rescue LoadError => e
             errors << e
@@ -131,43 +156,25 @@ module Padrino
 
     ##
     # Returns default list of path globs to load as dependencies
-    #
-    def dependency_paths
-      # Load db adapter, libs, root models, app configuration
-      @dependency_paths ||= [
-        "#{root}/config/database.rb", "#{root}/lib/**/*.rb", "#{root}/shared/lib/**/*.rb",
-        "#{root}/models/**/*.rb", "#{root}/shared/models/**/*.rb", @custom_dependencies,
-        "#{root}/config/apps.rb"
-      ].flatten.compact
-    end
-
-    ##
     # Appends custom dependency patterns to the be loaded for Padrino
     #
     # ==== Examples
-    #    Padrino.custom_dependencies("#{Padrino.root}/foo/bar/*.rb")
+    #    Padrino.dependency_paths << "#{Padrino.root}/uploaders/*.rb"
     #
-    def custom_dependencies(*globs)
-      @custom_dependencies ||= []
-      @custom_dependencies.concat(globs)
-    end
-
-    ##
-    # Attempts to load all dependency libs that we need.
-    # If you use this method we can perform correctly a Padrino.reload!
-    #
-    def load_dependencies(*paths)
-      paths.each do |path|
-        FileSet.glob(path) { |file| load(file) }
-      end
+    def dependency_paths
+      @_dependency_paths_was = [
+        "#{root}/config/database.rb", "#{root}/lib/**/*.rb", "#{root}/shared/lib/**/*.rb",
+        "#{root}/models/**/*.rb", "#{root}/shared/models/**/*.rb", "#{root}/config/apps.rb"
+      ]
+      @_dependency_paths ||= @_dependency_paths_was
     end
 
     ##
     # Concat to $LOAD_PATH the given paths
     #
     def set_load_paths(*paths)
-      $:.concat(paths)
-      $:.uniq!
+      $:.concat(paths); load_paths.concat(paths)
+      $:.uniq!; load_paths.uniq!
     end
   end # self
 end # Padrino
