@@ -14,7 +14,7 @@ end
 
 SimpleDemo.controllers do
   get "/" do
-    'The magick number is: 4!' # Change only the number!!!
+    'The magick number is: 54!' # Change only the number!!!
   end
 
   get "/rand" do
