@@ -3,6 +3,10 @@ require File.expand_path(File.dirname(__FILE__) + '/fixtures/apps/simple')
 
 class TestRouter < Test::Unit::TestCase
 
+  def setup
+    Padrino.clear!
+  end
+
   should "dispatch paths correctly" do
     app = lambda { |env|
       [200, {
@@ -104,7 +108,6 @@ class TestRouter < Test::Unit::TestCase
   end
 
   should "works with padrino core applications" do
-    Padrino.mounted_apps.clear
     Padrino.mount("simple_demo").host("padrino.org")
     assert_equal ["simple_demo"], Padrino.mounted_apps.map(&:name)
     assert_equal ["padrino.org"], Padrino.mounted_apps.map(&:app_host)
@@ -120,7 +123,6 @@ class TestRouter < Test::Unit::TestCase
   end
 
   should "works with padrino applications" do
-    Padrino.mounted_apps.clear
     Padrino.mount("simple_demo").to("/foo").host(/.*\.padrino.org/)
 
     res = Rack::MockRequest.new(Padrino.application).get("/")
